Add .DS_Store to gitignore, update packages.json

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@ README.me
 # Compiled CSS & JS doesn't need to go into version control (unless using something like Github pages)
 css/
 js/dist/
+
+# For Macs
+.DS_Store
