--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-babel": "^6.1.2",
+    "gulp-clean-css": "^3.0.4",
     "gulp-notify": "^2.2.0",
-    "gulp-sass": "^2.1.1"
+    "gulp-sass": "^2.1.1",
+    "gulp-sourcemaps": "^2.5.1"
   }
 }
